--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div class="contact-section__form">
-                    <form action="https://formspree.io/your@email.com" method="POST">
+                    <form action="https://formspree.io/handalarm@gmail.com" method="POST">
                         <span class="contact-section__form-label contact-section__form-label-req">Name</span>
                         <div class="contact-section__form-field">
                             <input class="contact-section__form-field-name" type="text" name="First" placeholder="First" required>
