Fixing Submit button

--- a/contact.html
+++ b/contact.html
@@ -128,10 +128,12 @@
                         <span class="contact-section__form-label">Message (You can include as much information as you'd like!)</span>
                         <div class="contact-section__form-field">
                             <textarea name="message"></textarea>
-                         </div>    
+                         </div>
+                        <div style="width: 100%;text-align: center;">
+                            <button class="btn-contact" type="submit">Send Message</button>
+                        </div>
                     </form>
                 </div>
-                <button class="btn-contact" type="submit">Send Message</button>
             </div>
         </div>
     </div>
