Glider css fix.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="A portfolio site for my professional photograpghy.">
     <link href="https://fonts.googleapis.com/css?family=Forum|Raleway|EB+Garamond" rel="stylesheet"> 
     <link rel="stylesheet" href="assets/styles/styles-1e63218a0b.css"/>
-    <link rel="stylesheet" href="assets/styles/glider-2521efdc6d.css"/>
-    <script type="text/css" src="assets/scripts/glider-0ec12937c3.js"></script>
+    <link type="text/css" rel="stylesheet" href="assets/styles/glider-2521efdc6d.css"/>
+    <script src="assets/scripts/glider-0ec12937c3.js"></script>
     <script src="assets/scripts/mouse-4a8b78cbdf.js"></script>
     <script type="module" src="assets/scripts/App-3964f1485a.js"></script>
 </head>
