adding in link and target blank

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="btn-container-mbl">
                 <div class="btn-follow">
-                    <a href="https://www.instagram.com/t.y.li/">FOLLOW ALONG</a>
+                    <a href="https://www.instagram.com/t.y.li/" target="_blank">FOLLOW ALONG</a>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
             <img src="assets/images/instagram/logo.jpg"/>
         </div>
         <div class="page-section__instagram-profile">
-            <a>t.y.li</a>
+            <a href="https://www.instagram.com/t.y.li/" target="_blank">t.y.li</a>
             <div>
                 <span class="page-section__instagram-stats">2.8K Followers | 969 Following | 359 Posts</span>
             </div>
