--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
                         <li><a href="graduation" class="site-header__menu-links site-header__menu-links-graduation">Graduation</a></li>
                         <li class="site-header__dropdown"><span>More</span>
                             <ul class="site-header__dropdown-list">
-                                <li><a href="travel.html" class="site-header_menu-links">Travel</a></li>
+                                <li><a href="travel" class="site-header_menu-links">Travel</a></li>
                             </ul>
                         </li>
-                        <li><a href="about.html" class="site-header__menu-links">About</a></li>
-                        <li><a href="testimonials.html" class="site-header__menu-links">Testimonials</a></li>
-                        <li><a href="contact.html" class="site-header__menu-links site-header__menu-links-active">Contact</a></li>
+                        <li><a href="about" class="site-header__menu-links">About</a></li>
+                        <li><a href="testimonials" class="site-header__menu-links">Testimonials</a></li>
+                        <li><a href="contact" class="site-header__menu-links site-header__menu-links-active">Contact</a></li>
                     </ul>
                 </nav>
             </div>
