removing html extension

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                         <li><a href="graduation" class="site-header__menu-links site-header__menu-links-graduation">Graduation</a></li>
                         <li class="site-header__dropdown"><span>More</span>
                             <ul class="site-header__dropdown-list">
-                                <li><a href="travel.html" class="site-header_menu-links">Travel</a></li>
+                                <li><a href="travel" class="site-header_menu-links">Travel</a></li>
                             </ul>
                         </li>
                         <li><a href="about" class="site-header__menu-links site-header__menu-links-active">About</a></li>
