removing html extension

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <div class="primary-nav__mbl primary-nav__mbl-pd">
         <nav class="primary-nav__mbl-container">
             <ul>
-                <li><a href="index.html" class="site-header__menu-links">Home</a></li>
-                <li><a href="portraits.html" class="site-header__menu-links site-header__menu-links-active">Portraits</a></li>
-                <li><a href="commercial.html" class="site-header__menu-links">Commercial</a></li>
-                <li><a href="graduation.html" class="site-header__menu-links site-header__menu-links-graduation">Graduation</a></li>
-                <li><a href="travel.html" class="site-header__menu-links">Travel</a></li>
-                <li><a href="about.html" class="site-header__menu-links">About</a></li>
-                <li><a href="testimonials.html" class="site-header__menu-links">Testimonials</a></li>
-                <li><a href="contact.html" class="site-header__menu-links">Contact</a></li>
+                <li><a href="index" class="site-header__menu-links">Home</a></li>
+                <li><a href="portraits" class="site-header__menu-links site-header__menu-links-active">Portraits</a></li>
+                <li><a href="commercial" class="site-header__menu-links">Commercial</a></li>
+                <li><a href="graduation" class="site-header__menu-links site-header__menu-links-graduation">Graduation</a></li>
+                <li><a href="travel" class="site-header__menu-links">Travel</a></li>
+                <li><a href="about" class="site-header__menu-links">About</a></li>
+                <li><a href="testimonials" class="site-header__menu-links">Testimonials</a></li>
+                <li><a href="contact" class="site-header__menu-links">Contact</a></li>
             </ul>
         </nav>
     </div>
