removing html extension

--- a/travel.html
+++ b/travel.html
@@ -30,9 +30,9 @@
                                 <li><a href="travel" class="site-header_menu-links site-header__menu-links-active">Travel</a></li>
                             </ul>
                         </li>
-                        <li><a href="about.html" class="site-header__menu-links">About</a></li>
-                        <li><a href="testimonials.html" class="site-header__menu-links">Testimonials</a></li>
-                        <li><a href="contact.html" class="site-header__menu-links">Contact</a></li>
+                        <li><a href="about" class="site-header__menu-links">About</a></li>
+                        <li><a href="testimonials" class="site-header__menu-links">Testimonials</a></li>
+                        <li><a href="contact" class="site-header__menu-links">Contact</a></li>
                     </ul>
                 </nav>
             </div>
