--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <nav class="primary-nav__mbl-container">
             <ul>
                 <li><a href="index" class="site-header__menu-links">Home</a></li>
-                <li><a href="portraits" class="site-header__menu-links site-header__menu-links-active">Portraits</a></li>
+                <li><a href="portraits" class="site-header__menu-links">Portraits</a></li>
                 <li><a href="commercial" class="site-header__menu-links">Commercial</a></li>
                 <li><a href="graduation" class="site-header__menu-links site-header__menu-links-graduation">Graduation</a></li>
                 <li><a href="travel" class="site-header__menu-links">Travel</a></li>
