centering the button

--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,9 @@
                          </div>    
                     </
                 </div>
-                <button class="btn-contact" type="submit">Send Message</button>
+                <div style="text-align:center;">
+                    <button class="btn-contact" type="submit">Send Message</button>
+                </div>
             </div>
         </div>
     </div>
