--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div class="contact-section__form">
-                    <form action="https://formspree.io/Josephilty@hotmail.com" method="POST">
+                    <form action="https://formspree.io/Josephlity@hotmail.com" method="POST">
                         <span class="contact-section__form-label contact-section__form-label-req">Name</span>
                         <div class="contact-section__form-field">
                             <input class="contact-section__form-field-name" type="text" name="First" placeholder="First" required>
@@ -139,7 +139,7 @@
     </div>
     <footer class="site-footer site-footer-about">
         <div class="wrapper site-footer__contact">
-            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephilty@hotmail.com</p>
+            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephlity@hotmail.com</p>
         </div>
     </footer>
 </body>
