--- a/commercial.html
+++ b/commercial.html
@@ -85,7 +85,7 @@
         </div>  
     <footer class="site-footer">
         <div class="wrapper site-footer__contact">
-            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephilty@hotmail.com</p>
+            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephlity@hotmail.com</p>
         </div>
     </footer>
 </body>
