--- a/graduation.html
+++ b/graduation.html
@@ -124,7 +124,7 @@
         </div>
     <footer class="site-footer site-footer-graduation">
         <div class="wrapper site-footer__contact">
-            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephilty@hotmail.com</p>
+            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephlity@hotmail.com</p>
         </div>
     </footer>
 </body>
