--- a/portraits.html
+++ b/portraits.html
@@ -93,7 +93,7 @@
     </div>
     <footer class="site-footer site-footer-absolute">
         <div class="wrapper site-footer__contact">
-            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephilty@hotmail.com</p>
+            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephlity@hotmail.com</p>
         </div>
     </footer>
 </body>
