--- a/testimonials.html
+++ b/testimonials.html
@@ -126,7 +126,7 @@
     </div>    
     <footer class="site-footer site-footer-about">
         <div class="wrapper site-footer__contact">
-            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephilty@hotmail.com</p>
+            <p>T.y. Li Photography | Los Angeles / Orange County, California | Josephlity@hotmail.com</p>
         </div>
     </footer>
 </body>
