--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>T.Y Photography</title>
     <meta name="keywords" content="Photography">
-    <meta name="description" content="Photo stuff">
+    <meta name="description" content="Photography Portfolio">
     <link href="https://fonts.googleapis.com/css?family=Forum|Raleway|EB+Garamond" rel="stylesheet"> 
     <link rel="stylesheet" href="assets/styles/styles-e7ec766bc3.css"/>
     <link rel="stylesheet" href="assets/styles/glider-2521efdc6d.css"/>
